# Raptor

./: .gitignore  InstallRAPTOR.ps1  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
chemistry_raptor_excel/: README.md  pyproject.toml
chemistry_raptor_excel/src/chemistry_raptor_excel/: __init__.py
chemistry_raptor_gui/: README.md  pyproject.toml
chemistry_raptor_gui/src/chemistry_raptor_gui/: __init__.py  __main__.py  util.py
chemistry_raptor_gui/src/chemistry_raptor_gui/ui/: MainWindow.py  Menubar.py  Potentiometrie.py  __init__.py
chemistry_raptor_gui/src/chemistry_raptor_gui/ui/PotentiometrieWidgets/: DataInput.py  MenuBar.py  __init__.py
chemistry_raptor_gui/src/chemistry_raptor_gui/ui/dialog/: AboutDialog.py  ExcelImport.py
potentio_gui/: __main__.py
src/chemistry_raptor/: __init__.py  analysis.py  fitting.py  model.py  plotting.py  test_analysis.py  test_data.json
