[project]
name = "chemistry-raptor"
version = "0.1.0"
description = ""
authors = [{name = "MaFeLP", email = "mafelp@proton.me"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pandas-stubs==3.0.0.260204",
    "scipy>=1.17.0",
    "scipy-stubs==1.17.0.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.uv.sources]
chemistry_raptor = { workspace = true }
chemistry_raptor_gui = { path = "chemistry_raptor_gui" }
chemistry_raptor_excel = { path = "chemistry_raptor_excel" }

[tool.uv.workspace]
members = ["chemistry_raptor_gui", "chemistry_raptor_excel"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
