[project]
name = "chemistry-raptor"
version = "0.1.0"
description = ""
authors = [{name = "MaFeLP", email = "mafelp@proton.me"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-stubs==3.0.3.260530",
    "scipy>=1.18.0",
    "scipy-stubs==1.18.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]

[tool.uv.sources]
chemistry_raptor = { workspace = true }
chemistry_raptor_gui = { path = "chemistry_raptor_gui" }
chemistry_raptor_excel = { path = "chemistry_raptor_excel" }

[tool.uv.workspace]
members = ["chemistry_raptor_gui", "chemistry_raptor_excel"]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
