[project]
name = "chemistry-raptor-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MaFeLP", email = "mafelp@proton.me" }
]
requires-python = ">=3.14"
dependencies = [
    "xlwings==0.36.10",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
