[project]
name = "chemistry-raptor-gui"
version = "0.1.0"
description = ""
authors = [{name = "MaFeLP", email = "mafelp@proton.me"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chemistry-raptor",
    "pyqt6>=6.11.0",
    "pyxdg>=0.28",
]

[project.scripts]
chemistry_raptor = "chemistry_raptor_gui:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
chemistry-raptor = { workspace = true }
